HTML file corrected

--- a/dibujo1.html
+++ b/dibujo1.html
@@ -27,7 +27,7 @@
       <input type="button" value="Enter" id="boton" />
     </p>
     <canvas width="300" height="300" id="dibujito"></canvas>
-    <p>Así queda tu dibujo2</p>
+    <p>Así queda tu dibujo</p>
     <script src="dibujo1.js"></script>
   </body>
 </html>
